[project]
name = "diving-streamlit"
version = "1.0.0"
description = ""
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "authlib>=1.6.4",
    "plotly>=6.3.0",
    "psycopg2-binary>=2.9.10",
    "pydantic[email]<2.0.0",
    "sqlalchemy>=2.0.43",
    "streamlit>=1.49.1",
    "streamlit-pydantic>=0.6.0",
]

[dependency-groups]
dev = [
    "watchdog>=6.0.0",
]

[tool.uv]
default-groups = []
